# SmartCAD

./: .gitignore  README.md  SmartCAD_AI.ipynb  __init__.py  index.html  main.jsx  main.py  package.json  pyproject.toml  smartcad.py  styles.css  vite.config.js
