[project]
name = "smartcad-ai-backend"
version = "1.0.0"
description = "FastAPI backend for SmartCAD-AI CAD design validation"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi>=0.116.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    "uvicorn[standard]>=0.35.0",
]

[tool.uv]
package = false

